--- a/flux/default/deployment.yaml
+++ b/flux/default/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-test
+  name: nginx-test-insidedefault
   namespace: nginx-flux
 spec:
   selector:
