--- a/flux/default/solr-repo.yaml
+++ b/flux/default/solr-repo.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: solr
-  namespace: default
+  namespace: system
 spec:
   interval: 1m
   url: https://solr.apache.org/charts
