--- a/clusters/my-cluster/nginx/nginxdeploy.yaml
+++ b/clusters/my-cluster/nginx/nginxdeploy.yaml
@@ -2,19 +2,19 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: nginx
+  namespace: nginx-deployment
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: nginx-deployment
   replicas: 2
   template:
     metadata:
       labels:
-        app: nginx
+        app: ginx-deployment
     spec:
       containers:
-      - name: nginx
+      - name: ginx-deployment
         image: nginx:1.14.2
         ports:
         - containerPort: 80
