--- a/clusters/my-cluster/nginx/nginxdeploy.yaml
+++ b/clusters/my-cluster/nginx/nginxdeploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: nginx-deployment
+  namespace: nginx
 spec:
   selector:
     matchLabels:
