--- a/clusters/my-cluster/opencost/helm-release.yaml
+++ b/clusters/my-cluster/opencost/helm-release.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: opencost
+      chart: charts/opencost
       sourceRef:
         kind: HelmRepository
         name: opencost
